<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tetris App</string>
    <string name="title">TETRIS</string>
    <string name="play">PLAY</string>
    <string name="t">T</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="i">I</string>
    <string name="s">S</string>
    <string name="arrow">➔</string>
    <string name="rotate">↻</string>
    <string name="high_scores">HIGH SCORES</string>
    <string name="settings">SETTINGS</string>
    <string name="points">POINTS</string>
    <string name="help_button">Help Button</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="save_score">SAVE SCORE</string>
    <string name="game_over">GAME OVER</string>
    <string name="points_display">POINTS: %1$d</string>
    <string name="points_placeholder">POINTS: PLACEHOLDER</string>
    <string name="enter_your_initials">ENTER YOUR INITIALS</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="empty_hint">"        "</string>
    <string name="tetris_image">Tetris Image</string>
    <string name="background_color">BACKGROUND COLOR</string>
    <string name="black_color_description">Black color</string>
    <string name="blue_color_description">Blue color</string>
    <string name="dark_grey_color_description">Dark grey color</string>
    <string name="green_color_description">Green color</string>
    <string name="grey_color_description">Grey color</string>
    <string name="orange_color_description">Orange color</string>
    <string name="pink_color_description">Pink color</string>
    <string name="purple_color_description">Purple color</string>
    <string name="red_color_description">Red color</string>
    <string name="turquoise_color_description">Turquoise color</string>
    <string name="white_color_description">White color</string>
    <string name="yellow_color_description">Yellow color</string>
    <string name="zero">0</string>
    <string name="how_to_play">HOW TO PLAY</string>
    <string name="help_text">The next shape grid displays the next block to be dropped.\n\n The dropped block falls from the middle of the play grid.\n\n Use the left and right direction arrow buttons to move a falling block in that direction.\n\n Use the down arrow button to instantly move a block to the bottom of the grid.\n\n Press the rotate button to rotate a block 90 degrees to the right.\n\n Each block placed is worth 20 points.\n\n When you completely fill up a line with colored blocks, the line is cleared.\n\n Each line cleared is worth 100 points.\n\n When blocks reach the top of the grid, the game is over.\n\n Get as many points as you can before your blocks reach the top!\n</string>
    <string name="restart_game">RESTART GAME</string>
</resources>