<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/block_dark_grey"
    android:padding="16dp">

    <!-- Settings Title -->
    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:fontFamily="@font/audiowide"
        android:background="@drawable/block_purple"
        android:padding="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <!-- Background Color Subtitle -->
    <TextView
        android:id="@+id/background_color_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background_color"
        android:textSize="24sp"
        android:background="@drawable/block_purple"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:fontFamily="@font/audiowide"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/settings_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <!-- Grid Layout for Color Buttons -->
    <GridLayout
        android:id="@+id/color_buttons_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/block_grey"
        android:padding="5dp"
        android:layout_marginTop="16dp"
        android:columnCount="3"
        android:rowCount="4"
        app:layout_constraintTop_toBottomOf="@id/background_color_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <!-- Button for each color option using block_(color) drawable -->
        <Button
            android:id="@+id/button_color_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@drawable/block_black"
            android:layout_margin="8dp"
            android:contentDescription="@string/black_color_description" />

        <Button
            android:id="@+id/button_color_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@drawable/block_blue"
            android:layout_margin="8dp"
            android:contentDescription="@string/blue_color_description" />

        <Button
            android:id="@+id/button_color_dark_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@drawable/block_dark_grey"
            android:layout_margin="8dp"
            android:contentDescription="@string/dark_grey_color_description" />

        <Button
            android:id="@+id/button_color_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@drawable/block_green"
            android:layout_margin="8dp"
            android:contentDescription="@string/green_color_description" />

        <Button
            android:id="@+id/button_color_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@drawable/block_grey"
            android:layout_margin="8dp"
            android:contentDescription="@string/grey_color_description" />

        <Button
            android:id="@+id/button_color_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@drawable/block_orange"
            android:layout_margin="8dp"
            android:contentDescription="@string/orange_color_description" />

        <Button
            android:id="@+id/button_color_pink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@drawable/block_pink"
            android:layout_margin="8dp"
            android:contentDescription="@string/pink_color_description" />

        <Button
            android:id="@+id/button_color_purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@drawable/block_purple"
            android:layout_margin="8dp"
            android:contentDescription="@string/purple_color_description" />

        <Button
            android:id="@+id/button_color_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@drawable/block_red"
            android:layout_margin="8dp"
            android:contentDescription="@string/red_color_description" />

        <Button
            android:id="@+id/button_color_turquoise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@drawable/block_turquoise"
            android:layout_margin="8dp"
            android:contentDescription="@string/turquoise_color_description" />

        <Button
            android:id="@+id/button_color_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@drawable/block_white"
            android:layout_margin="8dp"
            android:contentDescription="@string/white_color_description" />

        <Button
            android:id="@+id/button_color_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@drawable/block_yellow"
            android:layout_margin="8dp"
            android:contentDescription="@string/yellow_color_description" />

    </GridLayout>

    <!-- Return to Main Menu Button -->
    <Button
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:textSize="30sp"
        android:fontFamily="@font/audiowide"
        android:layout_marginTop="24dp"
        android:background="@drawable/play_background"
        android:textColor="@color/white"
        android:layout_marginBottom="40dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
