<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_dark_grey"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/help_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_play"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:padding="10dp"
        android:background="@drawable/title_background"
        android:fontFamily="@font/audiowide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/help_text"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/block_grey"
        android:textColor="@color/black"
        android:padding="12dp"
        android:text="@string/help_text"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/help_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/restart_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/play_background"
        android:fontFamily="@font/audiowide"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/restart_game"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
