<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dark_grey"
    android:padding="24dp">

    <TextView
        android:id="@+id/initials_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_initials"
        android:textSize="22sp"
        android:background="@drawable/block_purple"
        android:padding="6dp"
        android:textColor="@color/black"
        android:fontFamily="@font/audiowide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <EditText
        android:id="@+id/initials_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/block_white"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:hint="@string/empty_hint"
        android:inputType="text"
        android:maxLength="3"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/save_initials_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initials_prompt" />


    <View
        android:id="@+id/underline_view"
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:layout_marginTop="-12dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initials_input" />"/>


    <Button
        android:id="@+id/save_initials_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/play_background"
        android:fontFamily="@font/audiowide"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initials_prompt" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:background="@drawable/play_background"
        android:fontFamily="@font/audiowide"
        android:textSize="20sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/save_initials_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>
